argocd/media/tautulli/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tautulli-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tautulli.homelab.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-tautulli
        port: 30047
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: tautulli-certificate
